cmake_minimum_required (VERSION 3.0)
project (helloworld VERSION 1.0.$ENV{TRAVIS_BUILD_NUMBER})

configure_file (
	"${PROJECT_SOURCE_DIR}/HelloConfig.h.in"
	"${PROJECT_SOURCE_DIR}/HelloConfig.h"
)

SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Aleksei Zakharov")
SET(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

add_executable(helloworld main.cpp)
INSTALL(TARGETS helloworld RUNTIME DESTINATION bin)
INCLUDE(CPack)
